modifications doen to support embedded tomcat 7 for running within maven, not got this to work but movement of the applicationContext-mail made sense anyway, and the versioning got changed due to tomcat7 :( grrrrr but it was half half anyway, i would like to make it a property for the whole thing and not just the number!!